tests/models/enum/unnamed/i128/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        i128
    ),
}
fn main() {}
